--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -257,7 +257,44 @@
         "%cd $repo_root_dir\n",
         "%run ./nbfunc/hub.ipynb\n",
         "doProxy(force=True)\n",
-        "print(proxy)"
+        "print(proxy)\n",
+        "print(proxyURL)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d111957d-aad7-4d8c-91cd-6489d95dfecf",
+      "metadata": {},
+      "source": [
+        "## \u8bbe\u7f6eGit\u4f7f\u7528\u4ee3\u7406\u8bbf\u95eeGitHub"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "36d585b5-662c-4f92-8b71-aa253f453fe4",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def set_git_proxy(proxyURL):\n",
+        "    # \u8bbe\u7f6eGit\u5728\u4f7f\u7528HTTP\u534f\u8bae\u8bbf\u95eeGitHub\u65f6\u4f7f\u7528\u4ee3\u7406\u670d\u52a1\u5668\n",
+        "    !git config --global http.https://github.com.proxy $proxyURL\n",
+        "\n",
+        "    # \u8bbe\u7f6eGit\u5728\u4f7f\u7528HTTPS\u534f\u8bae\u8bbf\u95eeGitHub\u65f6\u4f7f\u7528\u4ee3\u7406\u670d\u52a1\u5668\n",
+        "    !git config --global https.https://github.com.proxy $proxyURL\n",
+        "\n",
+        "    # \u9a8c\u8bc1\u662f\u5426\u8bbe\u7f6e\u6210\u529f\n",
+        "    result = !git config --list\n",
+        "    # print(result)\n",
+        "    result = [str(item) for item in result] # \u5c06\u7ed3\u679c\u8f6c\u6362\u4e3a\u5b57\u7b26\u4e32\u5217\u8868\n",
+        "    http_proxy = f'http.https://github.com.proxy={proxyURL}'\n",
+        "    https_proxy = f'https.https://github.com.proxy={proxyURL}'\n",
+        "    if http_proxy in result and https_proxy in result:\n",
+        "        print('Git\u4ee3\u7406\u5df2\u6210\u529f\u8bbe\u7f6e\u3002')\n",
+        "    else:\n",
+        "        print('Git\u4ee3\u7406\u8bbe\u7f6e\u5931\u8d25\u3002')\n",
+        "\n",
+        "set_git_proxy(proxyURL)"
       ]
     },
     {
