--- a/nbfunc/proxy.ipynb
+++ b/nbfunc/proxy.ipynb
@@ -100,13 +100,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "region='\u672a\u77e5'\n",
-        "ip=''\n",
-        "port=''\n",
-        "    \n",
         "import os\n",
         "import threading\n",
         "import time\n",
+        "import requests\n",
         "\n",
         "def print_time(start_time):\n",
         "    time_elapsed = time.time() - start_time\n",
@@ -127,8 +124,28 @@
         "    port = proxy_info['port']\n",
         "\n",
         "    print(f\"Ping\u901a\u8be5IP\u4e0e\u7aef\u53e3\uff1a{ip}:{port}\uff0c\u6b63\u5728\u4f7f\u7528\u3010{region}\u3011\u4ee3\u7406\")\n",
-        "    \n",
-        "    \n",
+        "\n",
+        "def test_proxy(item):\n",
+        "    ip = item['ip']\n",
+        "    port = item['port']\n",
+        "    http_proxy = f'http://{ip}:{port}'\n",
+        "    https_proxy = f'https://{ip}:{port}'\n",
+        "    socks_proxy = f'socks5://{ip}:{port}'\n",
+        "    proxies = {\n",
+        "        'http': http_proxy,\n",
+        "        'https': https_proxy,\n",
+        "        'socks5': socks_proxy,\n",
+        "    }\n",
+        "    for protocol in proxies.keys():\n",
+        "        proxy = proxies[protocol]\n",
+        "        try:\n",
+        "            response = requests.get('http://www.gstatic.com/generate_204', proxies={protocol: proxy}, timeout=3)\n",
+        "            if response.status_code == 204:\n",
+        "                return True\n",
+        "        except:\n",
+        "            pass\n",
+        "    return False\n",
+        "\n",
         "def ping_threading(ipDict):\n",
         "    start_time = time.time()\n",
         "    # \u521b\u5efa\u4e00\u4e2a\u4e8b\u4ef6\uff0c\u7528\u4e8e\u5728\u6210\u529f ping \u901a\u67d0\u4e2a IP \u5730\u5740\u540e\u901a\u77e5\u5176\u4ed6\u7ebf\u7a0b\u9000\u51fa\n",
@@ -150,13 +167,9 @@
         "        return result[0]\n",
         "\n",
         "def ping_ip(item, result, event):\n",
-        "    # \u4ece\u5b57\u5178\u4e2d\u83b7\u53d6 IP \u5730\u5740\n",
-        "    ip = item['ip']\n",
-        "\n",
-        "    # \u4f7f\u7528 Linux \u7684 ping \u547d\u4ee4\u6d4b\u8bd5\u8be5 IP \u5730\u5740\u662f\u5426\u53ef\u4ee5 ping \u901a\n",
-        "    # \u5c06\u63a7\u5236\u53f0\u8f93\u51fa\u91cd\u5b9a\u5411\u5230/dev/null\uff0c\u4ee5\u5c4f\u853d ping \u547d\u4ee4\u7684\u8f93\u51fa\u4fe1\u606f\n",
-        "    if os.system('ping -c 1 -w 1 ' + ip + ' > /dev/null') == 0:\n",
-        "        # \u5982\u679c\u53ef\u4ee5 ping \u901a\uff0c\u5219\u5c06\u8be5\u5730\u5740\u6dfb\u52a0\u5230\u7ed3\u679c\u5217\u8868\u4e2d\n",
+        "    # \u6d4b\u8bd5\u4ee3\u7406\u662f\u5426\u53ef\u7528\n",
+        "    if test_proxy(item):\n",
+        "        # \u5982\u679c\u4ee3\u7406\u53ef\u7528\uff0c\u5219\u5c06\u8be5\u5730\u5740\u6dfb\u52a0\u5230\u7ed3\u679c\u5217\u8868\u4e2d\n",
         "        result.append(item)\n",
         "        # \u901a\u77e5\u5176\u4ed6\u7ebf\u7a0b\u9000\u51fa\n",
         "        event.set()"
@@ -183,12 +196,11 @@
         "env_name, content_path = de['env_name'], de['content_path']\n",
         "    \n",
         "ipDict = [\n",
-        "    {'region': '\u4e5d\u5929', 'ip': '172.22.17.74', 'port': '3928'}\n",
+        "    {'region': '\u81ea\u4f9b', 'ip': 'localhost', 'port': '7779'},\n",
         "]\n",
         "\n",
         "if env_name == 'AutoDL':\n",
-        "    ipDict = [\n",
-        "        {'region': '\u81ea\u4f9b', 'ip': 'localhost', 'port': '7779'},\n",
+        "    ipDict += [\n",
         "        {'region': '\u829c\u6e56', 'ip': '192.168.0.91', 'port': '12798'},\n",
         "        {'region': '\u5317\u4eac', 'ip': '100.72.64.19', 'port': '12798'},\n",
         "        {'region': '\u5185\u8499', 'ip': '192.168.1.174', 'port': '12798'},\n",
@@ -196,12 +208,16 @@
         "        {'region': '\u5357\u4eac', 'ip': '172.181.217.43', 'port': '12798'},\n",
         "        {'region': '\u4f5b\u5c71', 'ip': '192.168.126.12', 'port': '12798'},\n",
         "        {'region': 'A100\u4e13\u533a', 'ip': '172.31.1.127', 'port': '12798'},\n",
-        "    ] + ipDict\n",
+        "    ]\n",
         "elif env_name == 'OpenBayes':\n",
-        "    ipDict = [\n",
-        "        {'region': '\u81ea\u4f9b', 'ip': 'localhost', 'port': '7779'},\n",
+        "    ipDict += [\n",
         "        {'region': '\u8d1d\u5f0f', 'ip': 'alchemist-experience', 'port': '7890'},\n",
-        "    ] + ipDict\n",
+        "    ]\n",
+        "\n",
+        "ipDict += [\n",
+        "    {'region': '\u4e5d\u5929', 'ip': '172.22.17.74', 'port': '3928'},\n",
+        "]\n",
+        "\n",
         "\n",
         "debugging=False\n",
         "\n",
@@ -335,14 +351,24 @@
         "        sp = setProxy()\n",
         "        proxy = sp['proxy']\n",
         "        region = sp['region']\n",
+        "        proxyURL = sp['proxyURL']\n",
         "    else:\n",
         "        try:\n",
         "            proxy,region\n",
         "        except NameError:\n",
         "            sp = setProxy()\n",
         "            proxy = sp['proxy']\n",
-        "            region = sp['region']"
+        "            region = sp['region']\n",
+        "            proxyURL = sp['proxyURL']"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b8fdb326-c160-4a32-8017-f82b2a749dfd",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
