--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -256,7 +256,7 @@
         "#     region = sp['region']\n",
         "%cd $repo_root_dir\n",
         "%run ./nbfunc/hub.ipynb\n",
-        "doProxy(force=True)\n",
+        "selProxy(True,'\u81ea\u4f9b')\n",
         "print(proxy)\n",
         "print(proxyURL)"
       ]
