--- a/nbfunc/proxy.ipynb
+++ b/nbfunc/proxy.ipynb
@@ -359,7 +359,14 @@
         "            sp = setProxy()\n",
         "            proxy = sp['proxy']\n",
         "            region = sp['region']\n",
-        "            proxyURL = sp['proxyURL']"
+        "            proxyURL = sp['proxyURL']\n",
+        "            \n",
+        "def selProxy(force=False,region_name=None):\n",
+        "    # \u5982\u679c\u6307\u5b9a\u4e86region_name\uff0c\u5254\u9664\u4e0d\u7b26\u5408\u8981\u6c42\u7684\u4ee3\u7406\n",
+        "    global ipDict\n",
+        "    if region_name is not None:\n",
+        "        ipDict = [ip for ip in ipDict if ip['region'] == region_name]\n",
+        "    doProxy(force=force)"
       ]
     },
     {
