update LoRA models

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1275,7 +1275,8 @@
         "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',copy_or_mount) \n",
         "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
         "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
-        "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',copy_or_mount)"
+        "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',copy_or_mount)\n",
+        "check_model_and_make_symbollink('kl-f8-anime2.ckpt','./models/VAE',copy_or_mount)"
       ]
     },
     {
@@ -1469,12 +1470,14 @@
         "    create_model_with_thumbnail('bliznyashkiTheTwins_v1.safetensors',i,copy_or_mount)\n",
         "    # Noise Offset\u6a21\u578b\uff0c\u4f7f\u56fe\u7247\u7684\u5149\u7167\u770b\u8d77\u6765\u66f4\u771f\u5b9e\uff1ahttps://civitai.com/models/13941/epinoiseoffset\n",
         "    create_model_with_thumbnail('epiNoiseoffset_v2.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('epiNoiseoffset_v2Pynoise.safetensors',i,copy_or_mount)\n",
         "    # \u58a8\u5fc3\u98ce\u683c https://civitai.com/models/12597/moxin\n",
         "    create_model_with_thumbnail('Moxin_10.safetensors',i,copy_or_mount)\n",
         "    # \u89d2\u8272\u591a\u89c6\u89d2\u56fe https://civitai.com/models/7252/charturnerbeta-lora-experimental\n",
         "    create_model_with_thumbnail('charturnerbetaLora_charturnbetalora.safetensors',i,copy_or_mount)\n",
         "    # \u7ebf\u7a3f\n",
-        "    create_model_with_thumbnail('animeLineartStyle_v20Offset.safetensors',i,copy_or_mount)"
+        "    create_model_with_thumbnail('animeLineartStyle_v20Offset.safetensors',i,copy_or_mount)\n",
+        "    create_model_with_thumbnail('tokiameStyleThick.safetensors',i,copy_or_mount)"
       ]
     },
     {
@@ -2168,6 +2171,14 @@
         "\n",
         "!$cmd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "74706ef4-e2df-41ad-bfd8-26001781f300",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
