--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1278,6 +1278,8 @@
         "# \u4e8c\u6b21\u5143\u7c97\u63cf\u8fb9\u6a21\u578b\n",
         "check_model_and_make_symbollink('camelliamixLine_v10.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
         "check_model_and_make_symbollink('expmixLine_v20.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
+        "# Anything\u7cfb\u5217\u6a21\u578b\n",
+        "check_model_and_make_symbollink('anything-v4.5-pruned.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
         "\n",
         "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',copy_or_mount)\n",
         "check_model_and_make_symbollink('kl-f8-anime2.ckpt','./models/VAE',copy_or_mount)"
@@ -1481,7 +1483,12 @@
         "    create_model_with_thumbnail('charturnerbetaLora_charturnbetalora.safetensors',i,copy_or_mount)\n",
         "    # \u7ebf\u7a3f\n",
         "    create_model_with_thumbnail('animeLineartStyle_v20Offset.safetensors',i,copy_or_mount)\n",
-        "    create_model_with_thumbnail('tokiameStyleThick.safetensors',i,copy_or_mount)"
+        "    create_model_with_thumbnail('tokiameStyleThick.safetensors',i,copy_or_mount)\n",
+        "    # \u63cf\u8fb9\n",
+        "    create_model_with_thumbnail('thickerLinesAnimeStyle_loraVersion.safetensors',i,copy_or_mount)\n",
+        "    # \u50cf\u7d20\u98ce\n",
+        "    create_model_with_thumbnail('LuisapPixelArtLORA_v1.safetensors',i,copy_or_mount)\n",
+        "    "
       ]
     },
     {
