--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1279,7 +1279,8 @@
         "check_model_and_make_symbollink('camelliamixLine_v10.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
         "check_model_and_make_symbollink('expmixLine_v20.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
         "# Anything\u7cfb\u5217\u6a21\u578b\n",
-        "check_model_and_make_symbollink('anything-v4.5-pruned.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
+        "check_model_and_make_symbollink('anything-v4.5-pruned-fp16.ckpt','./models/Stable-diffusion',copy_or_mount)\n",
+        "check_model_and_make_symbollink('anything-v4.0-pruned-fp16.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
         "\n",
         "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',copy_or_mount)\n",
         "check_model_and_make_symbollink('kl-f8-anime2.ckpt','./models/VAE',copy_or_mount)"
