subprocess run clash

--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -154,13 +154,14 @@
         "\n",
         "    print('Clash\u914d\u7f6e\u5df2\u7ecf\u6e05\u7406\u3002')\n",
         "    \n",
-        "def run_clash(root_dir, config_dir, clash_run_dir,config_yaml_dist):\n",
-        "     \n",
+        "import subprocess\n",
+        "\n",
+        "def run_clash(root_dir, config_dir, clash_run_dir, config_yaml_dist):\n",
         "    clash_run_path = os.path.join(root_dir, clash_run_dir)\n",
         "    clash_Sim_EXEC = os.path.join(clash_run_path, 'clash')\n",
-        "    cmd = f'{clash_Sim_EXEC} -d {os.path.dirname(config_yaml_dist)}'\n",
+        "    cmd = [clash_Sim_EXEC, '-d', os.path.dirname(config_yaml_dist)]\n",
         "    print(cmd)\n",
-        "    !$cmd\n",
+        "    subprocess.Popen(cmd, stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
         "\n",
         "key_values_dict = {\n",
         "    'external-controller': '127.0.0.1:7776',\n",
