pip install --user

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -466,7 +466,7 @@
       "source": [
         "triton_install_args = base_args[:]\n",
         "triton_install_args += [\n",
-        "    'python -m pip install -U --pre triton'\n",
+        "    'python -m pip install --user -U --pre triton'\n",
         "]\n",
         "triton_install_cmd = (\" \").join(triton_install_args)\n",
         "print(triton_install_cmd)\n",
@@ -595,7 +595,7 @@
         "        \n",
         "        whl_path = whl_path_list[0]\n",
         "        # subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
-        "        !pip install $whl_path\n",
+        "        !pip install $whl_path --user \n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
@@ -744,7 +744,7 @@
         "        '&&',\n",
         "        # 'conda config --append channels conda-forge','&&',\n",
         "        # 'conda install --yes --file requirements.txt','&&',\n",
-        "        'python -m pip install -r requirements_versions.txt'\n",
+        "        'python -m pip install -r requirements_versions.txt --user'\n",
         "    ]\n",
         "    update_sd_webui_cmd = (\" \").join(update_sd_webui_args)\n",
         "    print(update_sd_webui_cmd)\n",
@@ -773,7 +773,7 @@
         "        '&&',\n",
         "        # 'conda config --append channels conda-forge','&&',\n",
         "        # 'conda install --yes --file requirements.txt','&&',\n",
-        "        'python -m pip install -r requirements_versions.txt'\n",
+        "        'python -m pip install -r requirements_versions.txt --user'\n",
         "    ]\n",
         "    sd_webui_download_cmd = (\" \").join(sd_webui_download_args)\n",
         "    print(sd_webui_download_cmd)\n",
