--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -2152,7 +2152,8 @@
         "    '--administrator',\n",
         "    '--disable-safe-unpickle',\n",
         "    '--no-half-vae',\n",
-        "    '--disable-nan-check'\n",
+        "    '--disable-nan-check',\n",
+        "    '--api'\n",
         "    # '--no-half'\n",
         "       ]\n",
         "\n",
