--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -166,7 +166,7 @@
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        continue\n",
         "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
-        "        !pip install $library\n",
+        "        !pip install --user $library\n",
         "    else:\n",
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        \n",
@@ -210,7 +210,11 @@
         "#     sp = setProxy()\n",
         "#     proxy = sp['proxy']\n",
         "#     region = sp['region']\n",
-        "doProxy()"
+        "%cd $repo_root_dir\n",
+        "%run ./nbfunc/hub.ipynb\n",
+        "selProxy(True,'\u81ea\u4f9b')\n",
+        "print(proxy)\n",
+        "print(proxyURL)"
       ]
     },
     {
@@ -417,7 +421,7 @@
         "\n",
         "# !cd $root_dir &&\\\n",
         "# cd triton/python &&\\\n",
-        "# pip install cmake &&\\\n",
+        "# pip install --user cmake &&\\\n",
         "# pip -v install -e ."
       ]
     },
@@ -440,7 +444,7 @@
       "source": [
         "triton_install_args = base_args[:]\n",
         "triton_install_args += [\n",
-        "    'python -m pip install -U --pre triton'\n",
+        "    'python -m pip install --user -U --pre triton'\n",
         "]\n",
         "triton_install_cmd = (\" \").join(triton_install_args)\n",
         "print(triton_install_cmd)\n",
@@ -551,7 +555,7 @@
         "        \n",
         "        whl_path = whl_path_list[0]\n",
         "        # subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
-        "        !pip install $whl_path\n",
+        "        !pip install --user $whl_path\n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
@@ -691,7 +695,7 @@
         "        install_cmd = (\" \").join(base_args[:] + [\n",
         "            f'cd {project_dir}',\n",
         "            '&&', \n",
-        "            'pip install --use-pep517 --upgrade -r requirements.txt'\n",
+        "            'pip install --user --use-pep517 --upgrade -r requirements.txt'\n",
         "        ])\n",
         "        print(install_cmd)\n",
         "        !$install_cmd\n",
@@ -854,6 +858,28 @@
         "    copy_or_mount = False\n",
         "elif env_name == 'OpenBayes':\n",
         "    copy_or_mount = True"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "6bd4fb9b-ae47-43bc-9ef6-d4722a4246a7",
+      "metadata": {},
+      "source": [
+        "# \u6302\u8f7d\u57fa\u7840\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1f612dc0-d677-463e-a2cf-fc851f2b99ef",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u521b\u5efabase_model\u76ee\u5f55\n",
+        "base_model_dir = os.path.join(root_dir, 'base_model')\n",
+        "if not os.path.exists(base_model_dir):\n",
+        "    os.mkdir(base_model_dir)\n",
+        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors',base_model_dir,copy_or_mount)"
       ]
     },
     {
@@ -1036,7 +1062,7 @@
         "\n",
         "launch_args = base_args[:] + [\n",
         "    f'cd {project_dir}','&&',\n",
-        "    # 'pip install \"opencv-python-headless<4.3\" ','&&',\n",
+        "    # 'pip install --user \"opencv-python-headless<4.3\" ','&&',\n",
         "    'python kohya_gui.py',\n",
         "    '--server_port 8877',\n",
         "]\n",
@@ -1053,7 +1079,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install --upgrade tensorflow opencv-python"
+        "# !pip install --user --upgrade tensorflow opencv-python"
       ]
     },
     {
@@ -1063,16 +1089,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!/usr/local/bin/python \"finetune/make_captions.py\" --batch_size=\"1\" --num_beams=\"1\" --top_p=\"0.9\" --max_length=\"75\" --min_length=\"5\" --beam_search --caption_extension=\".txt\" \"/openbayes/home/training_sessions/Padmasambhava LoRA/image/100_Padmasambhava\" --caption_weights=\"https://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\""
+        "# !/usr/local/bin/python \"finetune/make_captions.py\" --batch_size=\"1\" --num_beams=\"1\" --top_p=\"0.9\" --max_length=\"75\" --min_length=\"5\" --beam_search --caption_extension=\".txt\" \"/openbayes/home/training_sessions/Padmasambhava LoRA/image/100_Padmasambhava\" --caption_weights=\"https://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\""
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "09ec4537-bd67-4a91-9bb3-0f858791f55c",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
