--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -341,6 +341,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f3c4a42b-76a8-46c0-9872-6353f7d3d1a9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(base_args)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "353755d6-67f4-4a0e-aef1-d2aff43bf626",
       "metadata": {},
@@ -1089,8 +1099,46 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# !/usr/local/bin/python \"finetune/make_captions.py\" --batch_size=\"1\" --num_beams=\"1\" --top_p=\"0.9\" --max_length=\"75\" --min_length=\"5\" --beam_search --caption_extension=\".txt\" \"/openbayes/home/training_sessions/Padmasambhava LoRA/image/100_Padmasambhava\" --caption_weights=\"https://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\""
+        "!/usr/local/bin/python \\\n",
+        "\"finetune/make_captions.py\" \\\n",
+        "--batch_size=\"1\" \\\n",
+        "--num_beams=\"1\" \\\n",
+        "--top_p=\"0.9\" \\\n",
+        "--max_length=\"75\" \\\n",
+        "--min_length=\"5\" \\\n",
+        "--beam_search \\\n",
+        "--caption_extension=\".txt\" \\\n",
+        "\"/openbayes/home/training_sessions/LoRA/image\" \\\n",
+        "--caption_weights=\"https://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\""
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "502df3f9-d2a4-426b-93d7-0d2d37d1cb09",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install accelerate\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "68b0735c-f3c0-4b7e-a67a-9953883151b0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!accelerate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3079306f-a655-498d-9e14-574e6f29b534",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
