simplify model mount code

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1269,21 +1269,32 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# SD 2.1\u6a21\u578b\n",
-        "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt','./models/Stable-diffusion',copy_or_mount)\n",
-        "# ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
-        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',copy_or_mount) \n",
-        "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
-        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
-        "# \u4e8c\u6b21\u5143\u7c97\u63cf\u8fb9\u6a21\u578b\n",
-        "check_model_and_make_symbollink('camelliamixLine_v10.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
-        "check_model_and_make_symbollink('expmixLine_v20.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
-        "# Anything\u7cfb\u5217\u6a21\u578b\n",
-        "check_model_and_make_symbollink('anything-v4.5-pruned-fp16.ckpt','./models/Stable-diffusion',copy_or_mount)\n",
-        "check_model_and_make_symbollink('anything-v4.0-pruned-fp16.safetensors','./models/Stable-diffusion',copy_or_mount)\n",
+        "# Stable-diffusion \u6a21\u578b\n",
+        "sd_models = [\n",
+        "    'v2-1_768-nonema-pruned.ckpt',  # SD 2.1\u6a21\u578b\n",
+        "    'chilloutmix_NiPrunedFp16.safetensors',  # ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
+        "    'abyssorangemix3AOM3_aom3a3.safetensors',  # AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
+        "    'camelliamixLine_v10.safetensors',  # \u4e8c\u6b21\u5143\u7c97\u63cf\u8fb9\u6a21\u578b\n",
+        "    'expmixLine_v20.safetensors',  # \u4e8c\u6b21\u5143\u7c97\u63cf\u8fb9\u6a21\u578b\n",
+        "    'anything-v4.5-pruned-fp16.ckpt',  # Anything\u7cfb\u5217\u6a21\u578b\n",
+        "    'anything-v4.0-pruned-fp16.safetensors',  # Anything\u7cfb\u5217\u6a21\u578b\n",
+        "    'PVC-AO.safetensors',  # PVC\u624b\u529e\u6a21\u578b\n",
+        "    'midjourneyPapercut_v1.ckpt'  # PVC\u624b\u529e\u6a21\u578b\n",
+        "]\n",
         "\n",
-        "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',copy_or_mount)\n",
-        "check_model_and_make_symbollink('kl-f8-anime2.ckpt','./models/VAE',copy_or_mount)"
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model in sd_models:\n",
+        "    check_model_and_make_symbollink(model, './models/Stable-diffusion', copy_or_mount)\n",
+        "\n",
+        "# VAE\u6a21\u578b\n",
+        "vae_models = [\n",
+        "    'orangemix.vae.pt',\n",
+        "    'kl-f8-anime2.ckpt'\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model in vae_models:\n",
+        "    check_model_and_make_symbollink(model, './models/VAE', copy_or_mount)"
       ]
     },
     {
@@ -1308,12 +1319,19 @@
         "# \u8be5\u6a21\u578b\u7684\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttps://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\n",
         "check_model_and_make_symbollink('model_large_caption.pth',torch_hub_checkpoints_dir,copy_or_mount)\n",
         "\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_artists.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_flavors.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_mediums.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_movements.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_negative.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_trendings.safetensors','./models/clip-interrogator',copy_or_mount)"
+        "# Clip-Interrogator \u6a21\u578b\n",
+        "vit_models = [\n",
+        "    'ViT-L-14_openai_artists.safetensors',\n",
+        "    'ViT-L-14_openai_flavors.safetensors',\n",
+        "    'ViT-L-14_openai_mediums.safetensors',\n",
+        "    'ViT-L-14_openai_movements.safetensors',\n",
+        "    'ViT-L-14_openai_negative.safetensors',\n",
+        "    'ViT-L-14_openai_trendings.safetensors'\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model in vit_models:\n",
+        "    check_model_and_make_symbollink(model, './models/clip-interrogator', copy_or_mount)"
       ]
     },
     {
@@ -1349,9 +1367,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "check_model_and_make_symbollink('bad_prompt_version2.pt','./embeddings',copy_or_mount)\n",
-        "check_model_and_make_symbollink('EasyNegative.safetensors','./embeddings',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ng_deepnegative_v1_75t.pt','./embeddings',copy_or_mount)"
+        "# \u5d4c\u5165\u6a21\u578b\n",
+        "ti_embeddings = [\n",
+        "    'bad_prompt_version2.pt',\n",
+        "    'EasyNegative.safetensors',\n",
+        "    'ng_deepnegative_v1_75t.pt'\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model in ti_embeddings:\n",
+        "    check_model_and_make_symbollink(model, './embeddings', copy_or_mount)"
       ]
     },
     {
@@ -1451,45 +1476,33 @@
         ")\n",
         "\n",
         "for i in [SD_orig_Lora_dir]:\n",
-        "    # \u9e1f\u5c71\u660e\u98ce\u683c\n",
-        "    create_model_with_thumbnail('Akira Toriyama.safetensors',i,copy_or_mount)\n",
-        "    # \u7535\u952f\u4eba \u739b\u5947\u739b\n",
-        "    create_model_with_thumbnail('Makima.safetensors',i,copy_or_mount)\n",
-        "    # \u52a8\u753b\u7247\u8d28\u611f\n",
-        "    create_model_with_thumbnail('animeScreencapStyle_v230epochs.safetensors',i,copy_or_mount)\n",
-        "    # \u9f9f\u6ce2\u6c14\u529f\n",
-        "    create_model_with_thumbnail('kamehameha.safetensors',i,copy_or_mount)\n",
-        "    # \u539f\u795e \u4e3d\u838e \u6a21\u578b https://civitai.com/models/4664/lisa-lora-collection-of-trauters\n",
-        "    create_model_with_thumbnail('lisaLoraCollectionOf_singleLoraLisa.safetensors',i,copy_or_mount)\n",
-        "    # \u585e\u5c14\u8fbe\u516c\u4e3b\u6a21\u578b\n",
-        "    create_model_with_thumbnail('princess zelda.safetensors',i,copy_or_mount)\n",
-        "    # \u5f02\u5ea6\u4e4b\u5203\u6a21\u578b https://civitai.com/models/5179/pyra-mythra-pneuma-xenoblade-lora\n",
-        "    create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors',i,copy_or_mount)\n",
-        "    # wlop\u753b\u98ce\u6a21\u578b https://civitai.com/models/5042/wlop-style-lora\n",
-        "    create_model_with_thumbnail('wlop.safetensors',i,copy_or_mount)\n",
-        "    # \u516b\u4e91\u7d2b\u6a21\u578b https://civitai.com/models/5236/yakumo-yukari\n",
-        "    create_model_with_thumbnail('yakumo_yukari.pt',i,copy_or_mount)\n",
-        "    # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
-        "    create_model_with_thumbnail('atomicHeartTwins_v1.safetensors',i,copy_or_mount)\n",
-        "    # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
-        "    create_model_with_thumbnail('atomictwinnies_v10.safetensors',i,copy_or_mount)\n",
-        "    # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
-        "    create_model_with_thumbnail('bliznyashkiTheTwins_v1.safetensors',i,copy_or_mount)\n",
-        "    # Noise Offset\u6a21\u578b\uff0c\u4f7f\u56fe\u7247\u7684\u5149\u7167\u770b\u8d77\u6765\u66f4\u771f\u5b9e\uff1ahttps://civitai.com/models/13941/epinoiseoffset\n",
-        "    create_model_with_thumbnail('epiNoiseoffset_v2.safetensors',i,copy_or_mount)\n",
-        "    create_model_with_thumbnail('epiNoiseoffset_v2Pynoise.safetensors',i,copy_or_mount)\n",
-        "    # \u58a8\u5fc3\u98ce\u683c https://civitai.com/models/12597/moxin\n",
-        "    create_model_with_thumbnail('Moxin_10.safetensors',i,copy_or_mount)\n",
-        "    # \u89d2\u8272\u591a\u89c6\u89d2\u56fe https://civitai.com/models/7252/charturnerbeta-lora-experimental\n",
-        "    create_model_with_thumbnail('charturnerbetaLora_charturnbetalora.safetensors',i,copy_or_mount)\n",
-        "    # \u7ebf\u7a3f\n",
-        "    create_model_with_thumbnail('animeLineartStyle_v20Offset.safetensors',i,copy_or_mount)\n",
-        "    create_model_with_thumbnail('tokiameStyleThick.safetensors',i,copy_or_mount)\n",
-        "    # \u63cf\u8fb9\n",
-        "    create_model_with_thumbnail('thickerLinesAnimeStyle_loraVersion.safetensors',i,copy_or_mount)\n",
-        "    # \u50cf\u7d20\u98ce\n",
-        "    create_model_with_thumbnail('LuisapPixelArtLORA_v1.safetensors',i,copy_or_mount)\n",
-        "    "
+        "    # \u6a21\u578b\n",
+        "    LoRA_models = [\n",
+        "        'Akira Toriyama.safetensors',  # \u9e1f\u5c71\u660e\u98ce\u683c\n",
+        "        'Makima.safetensors',  # \u7535\u952f\u4eba \u739b\u5947\u739b\n",
+        "        'animeScreencapStyle_v230epochs.safetensors',  # \u52a8\u753b\u7247\u8d28\u611f\n",
+        "        'kamehameha.safetensors',  # \u9f9f\u6ce2\u6c14\u529f\n",
+        "        'lisaLoraCollectionOf_singleLoraLisa.safetensors',  # \u539f\u795e \u4e3d\u838e \u6a21\u578b\n",
+        "        'princess zelda.safetensors',  # \u585e\u5c14\u8fbe\u516c\u4e3b\u6a21\u578b\n",
+        "        'pyraMythraPneuma_50Epochs.safetensors',  # \u5f02\u5ea6\u4e4b\u5203\u6a21\u578b\n",
+        "        'wlop.safetensors',  # wlop\u753b\u98ce\u6a21\u578b\n",
+        "        'yakumo_yukari.pt',  # \u516b\u4e91\u7d2b\u6a21\u578b\n",
+        "        'atomicHeartTwins_v1.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
+        "        'atomictwinnies_v10.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
+        "        'bliznyashkiTheTwins_v1.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
+        "        'epiNoiseoffset_v2.safetensors',  # Noise Offset\u6a21\u578b\n",
+        "        'epiNoiseoffset_v2Pynoise.safetensors',  # Noise Offset\u6a21\u578b\n",
+        "        'Moxin_10.safetensors',  # \u58a8\u5fc3\u98ce\u683c\n",
+        "        'charturnerbetaLora_charturnbetalora.safetensors',  # \u89d2\u8272\u591a\u89c6\u89d2\u56fe\n",
+        "        'animeLineartStyle_v20Offset.safetensors',  # \u7ebf\u7a3f\n",
+        "        'tokiameStyleThick.safetensors',  # \u7ebf\u7a3f\n",
+        "        'thickerLinesAnimeStyle_loraVersion.safetensors',  # \u63cf\u8fb9\n",
+        "        'LuisapPixelArtLORA_v1.safetensors'  # \u50cf\u7d20\u98ce\n",
+        "    ]\n",
+        "\n",
+        "    # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u6a21\u578b\n",
+        "    for model in LoRA_models:\n",
+        "        create_model_with_thumbnail(model, i, copy_or_mount)"
       ]
     },
     {
@@ -1592,19 +1605,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# midas\u6a21\u578b\n",
-        "check_model_and_make_symbollink('dpt_hybrid-midas-501f0c75.pt','./extensions/sd-webui-controlnet/annotator/midas',copy_or_mount)\n",
-        "# res101.pth\u6a21\u578b\n",
-        "check_model_and_make_symbollink('res101.pth','./extensions/sd-webui-controlnet/annotator/leres',copy_or_mount)\n",
-        "# hed\u6a21\u578b\n",
-        "check_model_and_make_symbollink('network-bsds500.pth','./extensions/sd-webui-controlnet/annotator/hed',copy_or_mount)\n",
-        "# mlsd\u6a21\u578b\n",
-        "check_model_and_make_symbollink('mlsd_large_512_fp32.pth','./extensions/sd-webui-controlnet/annotator/mlsd',copy_or_mount)\n",
-        "# hand_pose_model\u548cbody_pose_model\u6a21\u578b\n",
-        "check_model_and_make_symbollink('body_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',copy_or_mount)\n",
-        "check_model_and_make_symbollink('hand_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',copy_or_mount)\n",
-        "# Segmentation\u7684preprocessor\u6a21\u578b\n",
-        "check_model_and_make_symbollink('upernet_global_small.pth','./extensions/sd-webui-controlnet/annotator/uniformer',copy_or_mount)"
+        "# \u6a21\u578b\n",
+        "models = [\n",
+        "    ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
+        "    ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
+        "    ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
+        "    ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
+        "    ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
+        "    ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
+        "    ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model, directory in models:\n",
+        "    check_model_and_make_symbollink(model, f'./extensions/sd-webui-controlnet/annotator/{directory}', copy_or_mount)"
       ]
     },
     {
@@ -1622,14 +1636,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "check_model_and_make_symbollink('control_canny-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
-        "check_model_and_make_symbollink('control_depth-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
-        "check_model_and_make_symbollink('control_hed-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
-        "check_model_and_make_symbollink('control_mlsd-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
-        "check_model_and_make_symbollink('control_normal-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
-        "check_model_and_make_symbollink('control_openpose-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
-        "check_model_and_make_symbollink('control_scribble-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)\n",
-        "check_model_and_make_symbollink('control_seg-fp16.safetensors','./extensions/sd-webui-controlnet/models',copy_or_mount)"
+        "# \u6a21\u578b\u540d\u79f0\n",
+        "controlnet_models = [\n",
+        "    'control_canny-fp16.safetensors',\n",
+        "    'control_depth-fp16.safetensors',\n",
+        "    'control_hed-fp16.safetensors',\n",
+        "    'control_mlsd-fp16.safetensors',\n",
+        "    'control_normal-fp16.safetensors',\n",
+        "    'control_openpose-fp16.safetensors',\n",
+        "    'control_scribble-fp16.safetensors',\n",
+        "    'control_seg-fp16.safetensors'\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u540d\u79f0\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model_name in controlnet_models:\n",
+        "    check_model_and_make_symbollink(model_name, './extensions/sd-webui-controlnet/models', copy_or_mount)"
       ]
     },
     {
